# notes-on-dsp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
docs/: contributing.md  developer_guide.md  install.md  project_structure.md  user_guide.md
notebooks/analysis_windows/: 01-rectangular.ipynb  02-triangular.ipynb  03-hann.ipynb  04-hamming.ipynb  05-blackman.ipynb  06-blackman-harris.ipynb  07-kaiser.ipynb  windowed-signal.ipynb
notebooks/examples/: audio-signal-representations.ipynb
notebooks/frft_analysis/: frft-compact-representations.ipynb  frft-introduction.ipynb  frft-numerical-computation.ipynb
notebooks/spectral_analysis/: 01-introduction.ipynb  02-spectral-analysis.ipynb  sinc-pulse.ipynb  sinc-rect.ipynb  zero-phase-zero-padding.ipynb
notebooks/time-frequency_analysis/: frequency-modulated-signals.ipynb  stft-algorithm.ipynb
src/dsp/signals/: fm.py
src/dsp/transforms/: frft.py  stft.py
src/dsp/utils/: paths.py
